[gd_scene load_steps=3 format=3 uid="uid://c5mq8yf0lg8r5"]

[ext_resource type="Script" path="res://Scripts/ui/text_scene.gd" id="1_h3q8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TextScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_h3q8m")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 5

[node name="CharacterLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CharacterLeft" type="TextureRect" parent="CharacterLayer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
mouse_filter = 2
stretch_mode = 4

[node name="CharacterRight" type="TextureRect" parent="CharacterLayer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = -50.0
offset_bottom = 300.0
mouse_filter = 2
stretch_mode = 4

[node name="UILayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextWindow" type="Panel" parent="UILayer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="NameContainer" type="HBoxContainer" parent="UILayer/TextWindow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="UILayer/TextWindow/NameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "キャラクター名"
vertical_alignment = 1

[node name="TextContainer" type="MarginContainer" parent="UILayer/TextWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -40.0

[node name="TextLabel" type="RichTextLabel" parent="UILayer/TextWindow/TextContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "ここにテキストが表示されます。"
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="UILayer/TextWindow"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "▼クリック"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LogButton" type="Button" parent="UILayer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "ログ"

[node name="LogPanel" type="Panel" parent="UILayer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LogContainer" type="VBoxContainer" parent="UILayer/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LogTitle" type="Label" parent="UILayer/LogPanel/LogContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "テキストログ"
horizontal_alignment = 1

[node name="LogText" type="RichTextLabel" parent="UILayer/LogPanel/LogContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
fit_content = true

[node name="CloseButton" type="Button" parent="UILayer/LogPanel/LogContainer"]
layout_mode = 2
text = "閉じる"